--- a/packages/data/recovery-horizon-store/package.json
+++ b/packages/data/recovery-horizon-store/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@domain/recovery-horizon-engine": "workspace:*",
+    "@shared/type-level": "workspace:*",
     "@shared/result": "workspace:*"
   }
 }
