--- a/packages/domain/recovery-horizon-engine/tsconfig.json
+++ b/packages/domain/recovery-horizon-engine/tsconfig.json
@@ -11,6 +11,9 @@
   "references": [
     {
       "path": "./../../shared/type-level/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/horizon-lab-runtime/tsconfig.json"
     }
   ]
 }
