--- a/packages/service/recovery-horizon-orchestrator/package.json
+++ b/packages/service/recovery-horizon-orchestrator/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@domain/recovery-horizon-engine": "workspace:*",
     "@data/recovery-horizon-store": "workspace:*",
+    "@shared/horizon-lab-runtime": "workspace:*",
     "@shared/result": "workspace:*",
     "@shared/type-level": "workspace:*"
   }
