--- a/packages/shared/horizon-lab-runtime/package.json
+++ b/packages/shared/horizon-lab-runtime/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@domain/recovery-horizon-engine",
+  "name": "@shared/horizon-lab-runtime",
   "version": "0.0.1",
   "private": true,
   "main": "dist/index.js",
@@ -14,8 +14,7 @@
     "build": "tsc -b"
   },
   "dependencies": {
-    "zod": "^3.24.0",
     "@shared/type-level": "workspace:*",
-    "@shared/horizon-lab-runtime": "workspace:*"
+    "@shared/result": "workspace:*"
   }
 }
