feat: add recovery lab orchestration core with convergence runtime and React convergence UI

--- a/packages/app/recovery-incident-lab-console/package.json
+++ b/packages/app/recovery-incident-lab-console/package.json
@@ -18,6 +18,7 @@
     "@domain/recovery-incident-lab-core": "workspace:*",
     "@domain/recovery-horizon-engine": "workspace:*",
     "@data/recovery-horizon-store": "workspace:*",
+    "@domain/recovery-lab-orchestration-core": "workspace:*",
     "@service/recovery-horizon-orchestrator": "workspace:*",
     "@shared/horizon-lab-runtime": "workspace:*",
     "@service/recovery-stress-lab-orchestrator": "workspace:*",
