--- a/packages/app/recovery-incident-lab-console/tsconfig.json
+++ b/packages/app/recovery-incident-lab-console/tsconfig.json
@@ -33,6 +33,9 @@
       "path": "./../../domain/recovery-incident-lab-core/tsconfig.json"
     },
     {
+      "path": "./../../domain/recovery-lab-orchestration-core/tsconfig.json"
+    },
+    {
       "path": "./../../domain/recovery-horizon-engine/tsconfig.json"
     },
     {
