--- a/packages/domain/recovery-incident-lab-core/tsconfig.json
+++ b/packages/domain/recovery-incident-lab-core/tsconfig.json
@@ -22,6 +22,9 @@
       "path": "./../../domain/recovery-stress-lab/tsconfig.json"
     },
     {
+      "path": "./../../domain/recovery-lab-governance/tsconfig.json"
+    },
+    {
       "path": "./../../shared/validation/tsconfig.json"
     }
   ]
