chore: integrate compiler bench artifacts fallback and pending TS stress changes

--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -90,5 +90,7 @@
     "@service/recovery-orchestration-atlas": "workspace:*",
     "@service/recovery-fabric-cadence-orchestrator": "workspace:*",
     "@domain/recovery-fabric-cadence-core": "workspace:*"
+    ,
+    "@domain/recovery-fusion-intelligence": "workspace:*"
   }
 }
