--- a/packages/service/recovery-fabric-controller/tsconfig.json
+++ b/packages/service/recovery-fabric-controller/tsconfig.json
@@ -27,5 +27,9 @@
     {
       "path": "./../../shared/core/tsconfig.json"
     }
+    ,
+    {
+      "path": "./../../domain/recovery-fusion-intelligence/tsconfig.json"
+    }
   ]
 }
