ci: derive benchmark dir from runner working directory

--- a/.github/workflows/compiler-bench.yml
+++ b/.github/workflows/compiler-bench.yml
@@ -53,7 +53,7 @@ jobs:
         run: |
           set -euo pipefail
 
-          BENCH_DIR="${GITHUB_WORKSPACE}/.bench"
+          BENCH_DIR="$(pwd)/.bench"
           mkdir -p "$BENCH_DIR"
 
           clean_outputs() {
