--- a/packages/app/recovery-incident-dashboard/tsconfig.json
+++ b/packages/app/recovery-incident-dashboard/tsconfig.json
@@ -146,6 +146,9 @@
       "path": "./../../domain/recovery-ops-orchestration-lab/tsconfig.json"
     },
     {
+      "path": "./../../domain/recovery-lab-console-core/tsconfig.json"
+    },
+    {
       "path": "./../../service/recovery-incident-scenario-orchestrator/tsconfig.json"
     },
     {
