--- a/packages/service/recovery-stress-lab-orchestrator/package.json
+++ b/packages/service/recovery-stress-lab-orchestrator/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "@domain/recovery-stress-lab": "workspace:*",
+    "@domain/recovery-incident-lab-core": "workspace:*",
     "@data/recovery-incident-lab-store": "workspace:*",
+    "@data/recovery-horizon-store": "workspace:*",
     "@shared/type-level": "workspace:*",
     "@shared/core": "workspace:*",
     "@shared/stress-lab-runtime": "workspace:*",
