--- a/packages/service/recovery-stress-lab-orchestrator/tsconfig.json
+++ b/packages/service/recovery-stress-lab-orchestrator/tsconfig.json
@@ -19,6 +19,12 @@
       "path": "./../../data/recovery-incident-lab-store/tsconfig.json"
     },
     {
+      "path": "./../../data/recovery-horizon-store/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/recovery-incident-lab-core/tsconfig.json"
+    },
+    {
       "path": "./../../shared/core/tsconfig.json"
     },
     {
