--- a/packages/data/recovery-horizon-store/package.json
+++ b/packages/data/recovery-horizon-store/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "@domain/recovery-horizon-engine": "workspace:*",
+    "@domain/recovery-incident-lab-core": "workspace:*",
     "@shared/type-level": "workspace:*",
+    "@shared/core": "workspace:*",
     "@shared/result": "workspace:*"
   }
 }
