--- a/packages/data/recovery-incident-lab-store/package.json
+++ b/packages/data/recovery-incident-lab-store/package.json
@@ -17,6 +17,7 @@
     "@domain/recovery-incident-lab-core": "workspace:*",
     "@domain/recovery-stress-lab": "workspace:*",
     "@shared/stress-lab-runtime": "workspace:*",
+    "@shared/type-level": "workspace:*",
     "@shared/validation": "workspace:*",
     "@shared/core": "workspace:*",
     "@shared/result": "workspace:*"
