--- a/packages/app/recovery-console/tsconfig.json
+++ b/packages/app/recovery-console/tsconfig.json
@@ -85,6 +85,9 @@
       "path": "./../../domain/incident-fusion-models/tsconfig.json"
     },
     {
+      "path": "./../../domain/incident-command-models/tsconfig.json"
+    },
+    {
       "path": "./../../domain/recovery-command-forge/tsconfig.json"
     },
     {
