--- a/packages/domain/incident-command-models/package.json
+++ b/packages/domain/incident-command-models/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@shared/core": "workspace:*",
+    "@shared/util": "workspace:*",
     "@shared/type-level": "workspace:*",
     "zod": "^3.24.0"
   }
