refactor: harden recovery-horizon orchestrator typing and stream lifecycle

--- a/packages/app/adaptive-ops-console/package.json
+++ b/packages/app/adaptive-ops-console/package.json
@@ -31,6 +31,9 @@
     "react-dom": "^19.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "@domain/recovery-operations-control-plane": "workspace:*"
+    "@domain/recovery-operations-control-plane": "workspace:*",
+    "@service/recovery-horizon-orchestrator": "workspace:*",
+    "@domain/recovery-horizon-engine": "workspace:*",
+    "@data/recovery-horizon-store": "workspace:*"
   }
 }
