feat: finalize recovery fusion lab stress-test modules

--- a/packages/app/recovery-console/tsconfig.json
+++ b/packages/app/recovery-console/tsconfig.json
@@ -166,6 +166,9 @@
       "path": "./../../service/recovery-playbook-orchestrator/tsconfig.json"
     },
     {
+      "path": "./../../service/recovery-fusion-lab-orchestrator/tsconfig.json"
+    },
+    {
       "path": "./../../service/recovery-fabric-controller/tsconfig.json"
     },
     {
