--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -77,6 +77,7 @@
     "@service/recovery-playbook-lab-orchestrator": "workspace:*",
     "@domain/recovery-playbook-lab": "workspace:*",
     "@service/recovery-playbook-orchestrator": "workspace:*",
+    "@service/recovery-fusion-lab-orchestrator": "workspace:*",
     "@service/recovery-cadence-coordinator": "workspace:*",
     "@domain/recovery-playbook-orchestration": "workspace:*",
     "@service/recovery-simulation-orchestrator": "workspace:*",
