feat(app): add recovery lab runtime package with domain orchestration and console UI

--- a/packages/app/recovery-incident-lab-console/package.json
+++ b/packages/app/recovery-incident-lab-console/package.json
@@ -19,6 +19,7 @@
     "@domain/recovery-horizon-engine": "workspace:*",
     "@data/recovery-horizon-store": "workspace:*",
     "@domain/recovery-lab-orchestration-core": "workspace:*",
+    "@domain/recovery-lab-console-runtime": "workspace:*",
     "@service/recovery-horizon-orchestrator": "workspace:*",
     "@shared/horizon-lab-runtime": "workspace:*",
     "@service/recovery-stress-lab-orchestrator": "workspace:*",
