feat: expand signal-mesh domain/service/ui with advanced TypeScript patterns

--- a/packages/app/recovery-cockpit-ui/package.json
+++ b/packages/app/recovery-cockpit-ui/package.json
@@ -22,8 +22,11 @@
     "@data/recovery-cockpit-store": "workspace:*",
     "@data/recovery-cockpit-insights": "workspace:*",
     "@data/recovery-cockpit-analytics": "workspace:*",
+    "@domain/recovery-cockpit-signal-mesh": "workspace:*",
+    "@data/recovery-cockpit-signal-mesh-store": "workspace:*",
     "@data/recovery-cockpit-intent-store": "workspace:*",
     "@service/recovery-cockpit-orchestrator": "workspace:*",
+    "@service/recovery-cockpit-signal-orchestrator": "workspace:*",
     "@service/recovery-cockpit-intent-orchestrator": "workspace:*",
     "@shared/util": "workspace:*",
     "react": "^19.0.0",
