feat(policy-console): expand orchestration modules and type-level registry integrations

--- a/packages/app/policy-console/package.json
+++ b/packages/app/policy-console/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@domain/policy-engine": "workspace:*",
+    "@shared/type-level": "workspace:*",
     "@platform/security": "workspace:*",
     "@data/policy-orchestration-store": "workspace:*",
     "@domain/policy-orchestration": "workspace:*",
