feat: expand adaptive orchestration domain and incident lab UI for ts stress load

--- a/packages/app/recovery-incident-lab-console/package.json
+++ b/packages/app/recovery-incident-lab-console/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@data/recovery-incident-lab-store": "workspace:*",
     "@domain/recovery-incident-lab-core": "workspace:*",
+    "@domain/recovery-lab-adaptive-orchestration": "workspace:*",
     "@domain/recovery-horizon-engine": "workspace:*",
     "@data/recovery-horizon-store": "workspace:*",
     "@domain/recovery-lab-orchestration-core": "workspace:*",
