stress: expand recovery playbook studio TS surface with typed orchestration domain

--- a/packages/app/recovery-timeline-studio/package.json
+++ b/packages/app/recovery-timeline-studio/package.json
@@ -18,6 +18,9 @@
     "@domain/recovery-timeline": "workspace:*",
     "@data/recovery-timeline-store": "workspace:*",
     "@shared/result": "workspace:*",
+    "@service/recovery-ops-playbook-studio-orchestrator": "workspace:*",
+    "@domain/recovery-ops-playbook-studio": "workspace:*",
+    "@data/recovery-ops-playbook-studio-store": "workspace:*",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "@types/react": "^19.0.0",
