--- a/packages/infrastructure/recovery-scenario-orchestration-adapters/tsconfig.json
+++ b/packages/infrastructure/recovery-scenario-orchestration-adapters/tsconfig.json
@@ -13,10 +13,16 @@
       "path": "./../../domain/recovery-scenario-engine/tsconfig.json"
     },
     {
+      "path": "./../../domain/recovery-horizon-engine/tsconfig.json"
+    },
+    {
       "path": "./../../shared/core/tsconfig.json"
     },
     {
       "path": "./../../shared/result/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/type-level/tsconfig.json"
     },
     {
       "path": "./../../shared/zod-adapters/tsconfig.json"
