--- a/packages/service/recovery-horizon-orchestrator/package.json
+++ b/packages/service/recovery-horizon-orchestrator/package.json
@@ -8,6 +8,7 @@
     ".": "./src/index.ts",
     "./src": "./src/index.ts",
     "./*": "./src/*.ts",
+    "./*.js": "./src/*.ts",
     "./src/*": "./src/*.ts"
   },
   "scripts": {
@@ -18,6 +19,7 @@
     "@data/recovery-horizon-store": "workspace:*",
     "@shared/horizon-lab-runtime": "workspace:*",
     "@shared/result": "workspace:*",
-    "@shared/type-level": "workspace:*"
+    "@shared/type-level": "workspace:*",
+    "@infrastructure/recovery-scenario-orchestration-adapters": "workspace:*"
   }
 }
