--- a/packages/domain/recovery-cockpit-constellation-core/package.json
+++ b/packages/domain/recovery-cockpit-constellation-core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@domain/recovery-stress-lab",
+  "name": "@domain/recovery-cockpit-constellation-core",
   "version": "0.0.1",
   "private": true,
   "main": "dist/index.js",
@@ -14,11 +14,9 @@
     "build": "tsc -b"
   },
   "dependencies": {
-    "@shared/core": "workspace:*",
-    "@shared/result": "workspace:*",
-    "@shared/stress-lab-runtime": "workspace:*",
     "@shared/type-level": "workspace:*",
-    "@domain/recovery-lab-governance": "workspace:*",
+    "@shared/util": "workspace:*",
+    "@domain/recovery-cockpit-models": "workspace:*",
     "zod": "^3.24.0"
   }
 }
