--- a/packages/app/recovery-incident-lab-console/tsconfig.json
+++ b/packages/app/recovery-incident-lab-console/tsconfig.json
@@ -39,6 +39,9 @@
       "path": "./../../domain/recovery-lab-adaptive-orchestration/tsconfig.json"
     },
     {
+      "path": "./../../domain/recovery-lab-intelligence-core/tsconfig.json"
+    },
+    {
       "path": "./../../domain/recovery-horizon-engine/tsconfig.json"
     },
     {
